force-app/main/default/objects/CRM_Ibermatica_Configuration__c/CRM_Ibermatica_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>CRM Ibermatica Configuration</label>
</CustomObject>