force-app/main/default/objects/CRM_Ibermatica_Configuration__c/fields/client_secret__c.field-meta.xml
<CustomField>
    <fullName>client_secret__c</fullName>
    <label>client-secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>