force-app/main/default/objects/CRM_Ibermatica_Configuration__c/fields/URL_Consulta_New_File__c.field-meta.xml
<CustomField>
    <fullName>URL_Consulta_New_File__c</fullName>
    <label>URL Consulta New File</label>
    <length>255</length>
    <type>Text</type>
</CustomField>