force-app/main/default/objects/CRM_Ibermatica_Configuration__c/fields/URL_Preventa__c.field-meta.xml
<CustomField>
    <fullName>URL_Preventa__c</fullName>
    <label>URL Preventa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>